--- a/embed.html
+++ b/embed.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <a id="watch" href="#">watch on Pikko Videos</a>
-  <video controls autoplay></video>
+  <video controls></video>
 
   <script>
     const videoEl = document.querySelector("video");
