--- a/embed.html
+++ b/embed.html
@@ -11,6 +11,26 @@
       height: 100%;
       background-color: #000;
     }
+    .video-container {
+      position: relative;
+      width: 640px;
+      height: 360px;
+    }
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .thumb {
+      width: 120px;
+      opacity: 0.6;
+    }
     video {
       width: 100%;
       height: 100%;
@@ -19,8 +39,12 @@
   </style>
 </head>
 <body>
-  <a id="watch" href="#">watch on Pikko Videos</a>
-  <video controls></video>
+  <div class="video-container">
+    <video controls></video>
+    <div class="overlay">
+      <a id="watch" href="#"><img src="logo.png" class="thumb"></a>
+    </div>
+  </div>
 
   <script>
     const videoEl = document.querySelector("video");
