--- a/embed.html
+++ b/embed.html
@@ -25,8 +25,8 @@
     }
     .overlay {
       position: absolute;
-      top: 0;
-      left: 0;
+      bottom: 20px;
+      right: 20px;
       width: 100%;
       height: 100%;
       display: flex;
