--- a/embed.html
+++ b/embed.html
@@ -29,14 +29,11 @@
       right: 20px;
       width: 100%;
       height: 100%;
-      display: flex;
+      display: block;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       pointer-events: none;
-    }
-    .overlay a {
-      pointer-events: auto;
     }
     .thumb {
       width: 120px;
