--- a/embed.html
+++ b/embed.html
@@ -26,9 +26,9 @@
     .overlay {
       position: absolute;
       bottom: 20px;
-      right: 20px;
-      width: 100%;
-      height: 100%;
+      right: 30px;
+      width: auto;
+      height: auto;
       display: block;
       pointer-events: none;
     }
