--- a/embed.html
+++ b/embed.html
@@ -25,8 +25,8 @@
     }
     .overlay {
       position: absolute;
-      bottom: 20px;
-      right: 300px;
+      top: 20px;
+      right: 20px;
       width: auto;
       height: auto;
       display: block;
