--- a/terms.html
+++ b/terms.html
@@ -7,7 +7,7 @@
   <body>
     <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>rule</h1>
-    <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "This term").</p>
+    <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "This terms").</p>
     <p>･We are not responsible for any damages incurred to the accounts created through this service or videos posted.</p>
     <p>･Do not submit videos or text that other users may find offensive.</p>
     <p>･Do not use it in a manner that violates the Constitution.</p>
