--- a/embed.html
+++ b/embed.html
@@ -54,7 +54,7 @@
       videoEl.src = `${SERVER}/videos/${encodeURIComponent(videoId)}.mp4`;
       document.getElementById("watch").href = `watch.html?id=${encodeURIComponent(videoId)}`;
     } else {
-      document.body.innerHTML = "<p style='color:white;text-align:center;'>Video ID has not been entered.</p> <p>by</p> <a href="https://videos.bird.f5.si">Pikko Videos</a>";
+      document.body.innerHTML = "<p style='color:white;text-align:center;'>Video ID has not been entered.</p> <p>by Pikko Videos</p>";
     }
   </script>
 </body>
