--- a/you.html
+++ b/you.html
@@ -170,7 +170,7 @@
     }
 
     function copyUrl() {
-      const url = `https://videos.bird.f5.si/channel?name=${me}`;
+      const url = `https://videos.bird.f5.si/user?name=${me}`;
       navigator.clipboard.writeText(url);
     }
 
