--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>home - Pikko Videos</title>
+  <meta name="description" content="This is a video posting service.">
+<meta property="og:title" content="Pikko Videos">
+<meta property="og:description" content="This is a video posting service.">
+<meta property="og:url" content="https://videos.bird.f5.si">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
   <link rel="icon" href="favicon.ico">
