--- a/about.html
+++ b/about.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <title>about - Pikko Videos</title>
+    <meta name="description" content="This is a video posting service.">
+<meta property="og:title" content="Pikko Videos">
+<meta property="og:description" content="This is a video posting service.">
+<meta property="og:url" content="https://videos.bird.f5.si">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
