--- a/user.html
+++ b/user.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>user - Pikko Videos</title>
+  <meta name="description" content="user page">
+<meta property="og:title" content="Pikko Videos">
+<meta property="og:description" content="user page">
+<meta property="og:url" content="https://videos.bird.f5.si">
   <script src="js/config.js"></script>
   <link rel="icon" href="favicon.ico">
 </head>
