--- a/watch.html
+++ b/watch.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>watch - Pikko Videos</title>
+  <meta name="description" content="Let's watch the videos.">
+<meta property="og:title" content="Pikko Videos">
+<meta property="og:description" content="Let's watch the videos.">
+<meta property="og:url" content="https://videos.bird.f5.si">
   <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
   <style>
     .error {
