--- a/you.html
+++ b/you.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>my page - Pikko Videos</title>
+  <meta name="description" content="my page">
+<meta property="og:title" content="Pikko Videos">
+<meta property="og:description" content="my page">
+<meta property="og:url" content="https://videos.bird.f5.si">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
 </head>
