--- a/terms.html
+++ b/terms.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>terms of service - Pikko Videos</title>
-    <meta name="description" content="This is a video posting service.">
+    <meta name="description" content="terms of service">
 <meta property="og:title" content="Pikko Videos">
-<meta property="og:description" content="This is a video posting service.">
+<meta property="og:description" content="terms of service">
 <meta property="og:url" content="https://videos.bird.f5.si">
     <link rel="icon" href="favicon.ico">
   </head>
