--- a/signin.html
+++ b/signin.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>signin - Pikko Videos</title>
-  <meta name="description" content="Let's continue!">
+  <meta name="description" content="This is a video posting service.">
 <meta property="og:title" content="Pikko Videos">
-<meta property="og:description" content="Let's continue!">
+<meta property="og:description" content="This is a video posting service.">
 <meta property="og:url" content="https://videos.bird.f5.si">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
