--- a/you.html
+++ b/you.html
@@ -27,9 +27,9 @@
   <button onclick="changeAccount()">change account</button>
   <p id="changeMsg" style="color: green;"></p>
 
-  <h2>upload a video</h2>
+  <h2>upload a video or music</h2>
   <input id="titleInput" placeholder="title"><br>
-  <input id="fileInput" type="file" accept="video/mp4"><br>
+  <input id="fileInput" type="file" accept="video/mp4,audio/mp3,audio/wav"><br>
   <textarea id="description" placeholder="description" rows="4" cols="40"></textarea><br>
   <button onclick="upload()">upload</button>
 
