--- a/you.html
+++ b/you.html
@@ -138,7 +138,7 @@
               <div id="edit-${v.id}"></div>
             </div>
           `).join("");
-          document.getElementById("list").innerHTML = list || "the videos is not there";
+          document.getElementById("list").innerHTML = list || "the videos and the musics is not there";
         });
     }
 
