--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <a href="https://videos.bird.f5.si"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+    <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
 
     <p><font color="red">Pikko and Pikko Videos couldn't find the page you were looking for.</font></p>
 
