--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <h1>signup</h1>
   <input id="username" placeholder="name"><br>
   <input id="password" type="password" placeholder="password"><br>
