--- a/terms.html
+++ b/terms.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
-    <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
+    <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>terms</h1>
     <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "These terms").</p>
      <p>･By signing up, users are automatically published online.</p>
