--- a/user.html
+++ b/user.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
   <div id="content"></div>
 
