--- a/watch.html
+++ b/watch.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <table>
     <tr>
       <th><input type="button" value="share" onclick="copyUrl()"></th>
