--- a/watch.html
+++ b/watch.html
@@ -8,11 +8,21 @@
   <meta property="og:description" content="Let's watch the videos.">
   <meta property="og:url" content="https://videos.bird.f5.si">
   <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
+  <script src="https://unpkg.com/wavesurfer.js"></script>
   <style>
+    body {
+      font-family: sans-serif;
+    }
     .error {
       color: red;
       font-weight: bold;
       margin-top: 1em;
+    }
+    #waveform {
+      width: 100%;
+      height: 100px;
+      margin-top: 20px;
+      background: #f0f0f0;
     }
   </style>
 </head>
@@ -48,21 +58,38 @@
           content.innerHTML = `
             <h1>${info.title} by ${info.username}</h1>
             ${isAudio
-              ? `<audio id="player" controls autoplay></audio>`
+              ? `<div id="waveform"></div>`
               : `<video id="player" controls autoplay playsinline></video>`}
             <p style="white-space: pre-wrap; margin-top: 1em;">${info.description}</p>
           `;
 
-          fetch(`${SERVER}/videos/${info.fileName}`)
-            .then(res => res.blob())
-            .then(blob => {
-              const url = URL.createObjectURL(blob);
-              document.getElementById("player").src = url;
-            })
-            .catch(() => {
-              const el = document.getElementById("player");
-              if (el) el.replaceWith(`<p class="error">Failed to load file.</p>`);
+          const fileUrl = `${SERVER}/videos/${info.fileName}`;
+
+          if (isAudio) {
+            const wavesurfer = WaveSurfer.create({
+              container: '#waveform',
+              waveColor: '#888',
+              progressColor: '#0af',
+              height: 100,
+              responsive: true
             });
+            wavesurfer.load(fileUrl);
+            wavesurfer.on('ready', () => {
+              wavesurfer.play();
+            });
+          } else {
+            fetch(fileUrl)
+              .then(res => res.blob())
+              .then(blob => {
+                const url = URL.createObjectURL(blob);
+                document.getElementById("player").src = url;
+              })
+              .catch(() => {
+                document.getElementById("player").replaceWith(
+                  `<p class="error">Failed to load video file.</p>`
+                );
+              });
+          }
         })
         .catch(() => {
           content.innerHTML = `<p class="error">error</p>`;
