--- a/embed.html
+++ b/embed.html
@@ -48,7 +48,7 @@
       opacity: 0.6;
     }
     button {
-      background: #0af;
+      background: green;
       color: white;
       border: none;
       padding: 8px 14px;
@@ -97,7 +97,7 @@
 
             const btn = document.createElement("button");
             btn.id = "togglePlay";
-            btn.textContent = "▶️ 再生";
+            btn.textContent = "▶";
 
             const controls = document.createElement("div");
             controls.id = "controls";
