--- a/embed.html
+++ b/embed.html
@@ -48,7 +48,7 @@
       opacity: 0.6;
     }
     button {
-      background: green;
+      background: #0af;
       color: white;
       border: none;
       padding: 8px 14px;
