--- a/watch.html
+++ b/watch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>watch - Pikko Videos</title>
   <meta name="description" content="Let's watch the videos and musics.">
   <meta property="og:title" content="Pikko Videos">
@@ -21,17 +21,32 @@
     #waveform {
       width: 100%;
       height: 100px;
-      margin-top: 20px;
       background: #f0f0f0;
+      margin-top: 20px;
+    }
+    #controls {
+      margin-top: 10px;
+    }
+    button {
+      background: #0af;
+      color: white;
+      border: none;
+      padding: 8px 14px;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    button:hover {
+      background: #09c;
     }
   </style>
 </head>
 <body>
-  <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./"><img src="logo.png" alt="logo" width="200" height="100" /></a>
   <table>
     <tr>
-      <th><input type="button" value="share" onclick="copyUrl()"></th>
-      <th><input type="button" value="embed" onclick="copyCode()"></th>
+      <th><input type="button" value="share" onclick="copyUrl()" /></th>
+      <th><input type="button" value="embed" onclick="copyCode()" /></th>
     </tr>
   </table>
   <div id="content"></div>
@@ -54,16 +69,18 @@
           document.title = `${info.title} by ${info.username} - Pikko Videos`;
           const ext = info.fileName.split(".").pop().toLowerCase();
           const isAudio = ext === "mp3" || ext === "wav";
+          const mediaUrl = `${SERVER}/videos/${info.fileName}`;
 
           content.innerHTML = `
             <h1>${info.title} by ${info.username}</h1>
-            ${isAudio
-              ? `<div id="waveform"></div>`
-              : `<video id="player" controls autoplay playsinline></video>`}
+            ${isAudio ? `
+              <div id="waveform"></div>
+              <div id="controls"><button id="togglePlay">▶</button></div>
+            ` : `
+              <video id="player" controls autoplay playsinline></video>
+            `}
             <p style="white-space: pre-wrap; margin-top: 1em;">${info.description}</p>
           `;
-
-          const fileUrl = `${SERVER}/videos/${info.fileName}`;
 
           if (isAudio) {
             const wavesurfer = WaveSurfer.create({
@@ -73,21 +90,33 @@
               height: 100,
               responsive: true
             });
-            wavesurfer.load(fileUrl);
-            wavesurfer.on('ready', () => {
-              wavesurfer.play();
+
+            wavesurfer.load(mediaUrl);
+
+            const btn = document.getElementById("togglePlay");
+            btn.addEventListener("click", () => {
+              wavesurfer.playPause();
+            });
+
+            wavesurfer.on("play", () => {
+              btn.textContent = "⏸";
+            });
+
+            wavesurfer.on("pause", () => {
+              btn.textContent = "▶";
             });
           } else {
-            fetch(fileUrl)
+            fetch(mediaUrl)
               .then(res => res.blob())
               .then(blob => {
                 const url = URL.createObjectURL(blob);
                 document.getElementById("player").src = url;
               })
               .catch(() => {
-                document.getElementById("player").replaceWith(
-                  `<p class="error">Failed to load video file.</p>`
-                );
+                const player = document.getElementById("player");
+                if (player) {
+                  player.replaceWith(`<p class="error">Failed to load video file.</p>`);
+                }
               });
           }
         })
@@ -97,8 +126,7 @@
     }
 
     function copyUrl() {
-      const url = location.href;
-      navigator.clipboard.writeText(url);
+      navigator.clipboard.writeText(location.href);
     }
 
     function copyCode() {
