--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <body>
     <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>What service is this?</h1>
-    <p>This service is a video posting service.</p>
+    <p>This is a video posting service.</p>
     <p><a href="https://videos.bird.f5.si/terms">terms of service is here</a></p>
     <h1>Thanks</h1>
     <p>This service was completed thanks to Copilot AI.</p>
