--- a/signup.html
+++ b/signup.html
@@ -17,6 +17,7 @@
   <input id="username" placeholder="name"><br>
   <input id="password" type="password" placeholder="password"><br>
   <p>Agree to the <a href="terms">"terms"</a> before creating an account.</p>
+  <p><a href="about">What service is this?</a></p>
   <button onclick="signup()">signup</button>
   <p id="message"></p>
   <p><a href="signin">signin</a></p>
