--- a/embed.html
+++ b/embed.html
@@ -146,6 +146,7 @@
           } else {
             const video = document.createElement("video");
             video.controls = true;
+            controlsList.nodownload = true;
             video.autoplay = false;
             video.playsInline = true;
             video.muted = false;
