--- a/about.html
+++ b/about.html
@@ -22,14 +22,16 @@
     <p>If video and other acquisitions are slow, or if it takes a long time to post videos, create an account, or log in, the server may not be running.</p>
     <p>If the situation does not change even after waiting for a while, please stop using the service.</p>
     <section>
-  <h1>Service Uptime</h1>
-  <ul>
-    <li>Sun: 8pm-</li><section>
-    <li>Mon: -10pm</li>
-    <li>Tue: 7:40am-</li>
-    <li>Wed: -11pm</li>
-    <li>Thu: 7:40am-</li>
-    <li>Fri: all</li>
-    <li>Sat: -10:20pm</li>
+      <h1>Service Uptime</h1>
+      <ul>
+        <li>Sun: 8pm-</li>
+        <li>Mon: -10pm</li>
+        <li>Tue: 7:40am-</li>
+        <li>Wed: -11pm</li>
+        <li>Thu: 7:40am-</li>
+        <li>Fri: all</li>
+        <li>Sat: -10:20pm</li>
+      </ul>
     </section>
   </body>
+</html>
