--- a/about.html
+++ b/about.html
@@ -24,13 +24,13 @@
     <section>
       <h1>Service Uptime</h1>
       <ul>
-        <li>Sun: 8pm-</li>
-        <li>Mon: -10pm</li>
-        <li>Tue: 7:40am-</li>
-        <li>Wed: -11pm</li>
-        <li>Thu: 7:40am-</li>
+        <li>Sun: from 8pm</li>
+        <li>Mon: to 10pm</li>
+        <li>Tue: from 7:40am</li>
+        <li>Wed: to 11pm</li>
+        <li>Thu: from 7:40am</li>
         <li>Fri: all</li>
-        <li>Sat: -10:20pm</li>
+        <li>Sat: to 10:20pm</li>
       </ul>
     </section>
   </body>
