--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>home - Pikko Videos</title>
   <meta name="description" content="This is a video posting service.">
 <meta property="og:title" content="Pikko Videos">
