--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 <meta property="og:title" content="Pikko Videos">
 <meta property="og:description" content="This is a video posting service.">
 <meta property="og:url" content="https://videos.bird.f5.si">
+<meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
