--- a/user.html
+++ b/user.html
@@ -7,6 +7,7 @@
 <meta property="og:title" content="Pikko Videos">
 <meta property="og:description" content="user page">
 <meta property="og:url" content="https://videos.bird.f5.si">
+<meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <link rel="icon" href="favicon.ico">
 </head>
