--- a/you.html
+++ b/you.html
@@ -7,6 +7,7 @@
 <meta property="og:title" content="Pikko Videos">
 <meta property="og:description" content="my page">
 <meta property="og:url" content="https://videos.bird.f5.si">
+<meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
 </head>
