--- a/watch.html
+++ b/watch.html
@@ -78,7 +78,7 @@
               <div id="waveform"></div>
               <div id="controls"><button id="togglePlay">play</button></div>
             ` : `
-              <video id="player" controls controlsList="nodownload" autoplay playsinline></video>
+              <video id="player" width="50%" height="50%" controls controlsList="nodownload" autoplay playsinline></video>
             `}
             <p style="white-space: pre-wrap; margin-top: 1em;">${info.description}</p>
           `;
