--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <p>If video and other acquisitions are slow, or if it takes a long time to post videos, create an account, or log in, the server may not be running.</p>
     <p>If the situation does not change even after waiting for a while, please stop using the service.</p>
     <section>
-      <h1>Service Uptime</h1>
+      <h1>Service Uptime(yet)</h1>
       <ul>
         <li>Sun: from 8pm</li>
         <li>Mon: to 10pm</li>
