--- a/about.html
+++ b/about.html
@@ -23,7 +23,13 @@
     <p>If video and other acquisitions are slow, or if it takes a long time to post videos, create an account, or log in, the server may not be running.</p>
     <p>If the situation does not change even after waiting for a while, please stop using the service.</p>
     <section>
-      <h1>Service Uptime(yet)</h1>
+        <h1><font color="green">Service Uptime(now)</font></h1>
+        <ul>
+          <li>Sorry, The service is still in testing, so Service Uptime is irregular.</li>
+        </ul>
+    </section>
+    <section>
+        <h1><font color="red">Service Uptime(after this)</font></h1>
       <ul>
         <li>Sun: from 8pm</li>
         <li>Mon: to 10pm</li>
