--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <section>
         <h1><font color="green">Service Uptime(now)</font></h1>
         <ul>
-          <li>Sorry, The service is still in testing, so Service Uptime is irregular. But, We're doing our best!!!</li>
+          <li>Sorry, The service is still in testing, so Service Uptime is irregular. But we're doing our best!!!</li>
         </ul>
     </section>
     <section>
